--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-notifications",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "description": "Redux & React based Notifications center",
   "scripts": {
     "start": "cd demo && node server.js",
@@ -25,9 +25,9 @@
     "react-addons-css-transition-group": "^15.0.2"
   },
   "peerDependencies": {
-    "redux": "2.0.0 || ^3.0.0",
-    "react-redux": "^3.1.0 || ^4.0.0",
-    "react": "^16.0.0"
+    "react": "^16.0.0",
+    "react-redux": "^5.0.0 || ^6.0.0",
+    "redux": "2.0.0 || ^3.0.0 || ^4.0.0"
   },
   "devDependencies": {
     "babel": "^5.8.23",
